--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 </nav>
 
 <main role="main">
+    <center> <h1>VIGNAN'S </h1></center>
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
